# PhotoShare

./: .example.env  .gitignore  README.md  admin.py  docker-compose.yml  docker_compose.yml  main.py  poetry_add.txt  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2fe894138c8a_change_unique_constraints_in_tables.py  3c6290aa11fa_add_table_rates.py  48b3cfa769ee_photo_m2m_tag_fix.py  534cb6694019_add_table_foto_filters.py  6ca69bd8aefa_change_unique_constraint_in_table_.py  73c08b795382_init.py  79659f046488_init.py  7fe7b73929fd_add_table_photo_transformations.py  b25c92a26661_add_created_at_updated_at_in_photo.py  e91870495617_photo_model_fix.py
src/conf/: allowed_operation.py  config.py  constants.py  logger.py  messages.py
src/database/: db.py  models.py
src/repository/: comments.py  functions.py  photo_filters.py  photo_transformations.py  photos.py  rates.py  tags.py  users.py
src/routes/: auth.py  comments.py  photo_filters.py  photo_transformations.py  photos.py  rates.py  tags.py  users.py
src/schemas/: comments.py  email.py  phone_number.py  photo_filters.py  photo_transformations.py  photos.py  rates.py  tags.py  users.py
src/services/: auth.py  email.py  phone_number.py  photo_transformations.py  photos.py  roles.py
src/web_admin/: admin_view.py
templates/: index.html
templates/web-admin/: README.md  index.html  main.html
tests/: conftest.py  test_route_auth.py  test_route_comments.py  test_route_rates.py  test_routes_auth.py  test_routes_photo_filters.py  test_routes_photos.py  test_routes_tags.py  test_routes_users.py  test_service_auth.py  test_unit_rates.py  test_unit_repository_comments.py  test_unit_repository_photo_filters.py  test_unit_repository_photo_transformations.py  test_unit_repository_photos.py  test_unit_repository_tags.py  test_unit_repository_users.py
(+5 files in other folders)
