[tool.poetry]
name = "photoshare"
version = "0.1.0"
description = ""
authors = ["Kirienko-Alyona <ladybird.miami@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
alembic = "^1.10.4"
sqlalchemy = "^2.0.12"
psycopg2 = "^2.9.6"
python-multipart = "^0.0.6"
redis = "^4.5.5"
cloudinary = "^1.32.0"
libgravatar = "^1.0.4"
fastapi-limiter = "^0.1.5"


[tool.poetry.group.dev.dependencies]
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
sphinx = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
